# example-fan-out-fan-in-rs

./: Cargo.toml  README.md
src/: main.rs
